--- a/views/site/class-wise.ejs
+++ b/views/site/class-wise.ejs
@@ -19,7 +19,7 @@
 			</div>
 			<div class="col-md-4 col-sm-4 col-xl-3">
 			  <div class="side_barheading">
-			  	<h6 href="subjectwise.html">Class Wise <i class="fas fa-hand-point-right hand_icon"></i></h6>
+			  	<h6 href="class-wise">Class Wise <i class="fas fa-hand-point-right hand_icon"></i></h6>
 			  </div>
 			  <ul class="nav nav-tabs" id="myTab" role="tablist">
 				  <li class="nav-item">
@@ -61,7 +61,7 @@
 				<a href=""><i class="fas fa-chevron-right"></i> Medical Study Material</a>
 			  </div>
 			</div>
-			<div class="col-md-8 col-sm-8 col-xl-9">
+			<div class="col-md-8 col-sm-8 col-xl-6">
 				<div class="tab-content">
 					<div class="tab-pane active" id="activelink" role="tabpanel">
 						<div class="main_title">
@@ -262,6 +262,53 @@
 				  <div class="tab-pane" id="link4" role="tabpanel">B.Sc</div>
 				  <div class="tab-pane" id="link5" role="tabpanel">BCA</div>
 				  <div class="tab-pane" id="link6" role="tabpanel">BA</div>
+				</div>
+			</div>
+
+			<div class="col-md-4 col-sm-4 col-xl-3">
+				<h1 class="blog_heading">Latest Blogs</h1>
+				<div class="latest_blog">
+					<ul id="ticker01">
+						<li><span>Heading</span><br><a href="#">The first thing that most Javascript programmers</a></li>
+						<li><span>Heading</span><br><a href="#">End up doing is adding some code</a></li>
+						<li><span>Heading</span><br><a href="#">The code that you want to run</a></li>
+						<li><span>Heading</span><br><a href="#">Inside of which is the code that you want to run</a></li>
+						<li><span>Heading</span><br><a href="#">Right when the page is loaded</a></li>
+						<li><span>Heading</span><br><a href="#">Problematically, however, the Javascript code</a></li>
+						<li><span>Heading</span><br><a href="#">The first thing that most Javascript programmers</a></li>
+						<li><span>Heading</span><br><a href="#">End up doing is adding some code</a></li>
+						<li><span>Heading</span><br><a href="#">The code that you want to run</a></li>
+						<li><span>Heading</span><br><a href="#">Inside of which is the code that you want to run</a></li>
+						<li><span>Heading</span><br><a href="#">Right when the page is loaded</a></li>
+						<li><span>Heading</span><br><a href="#">Problematically, however, the Javascript code</a></li>
+					</ul>
+				</div>
+				
+				<h1 class="blog_heading mt-3">Birth of Star</h1>
+				<div class="latest_blog">
+					<ul id="ticker01">
+						<li><span>John </span><a href="#"> (14/05/1991)</a></li>
+						<li><span>Robin </span><a href="#"> (20/12/1889)</a></li>
+						<li><span>Wasif </span><a href="#"> (30/01/1990)</a></li>
+						<li><span>John </span><a href="#"> (14/05/1991)</a></li>
+						<li><span>Robin </span><a href="#"> (20/12/1889)</a></li>
+						<li><span>Wasif </span><a href="#"> (30/01/1990)</a></li>
+						<li><span>John </span><a href="#"> (14/05/1991)</a></li>
+						<li><span>Robin </span><a href="#"> (20/12/1889)</a></li>
+						<li><span>Wasif </span><a href="#"> (30/01/1990)</a></li>
+						<li><span>John </span><a href="#"> (14/05/1991)</a></li>
+						<li><span>Robin </span><a href="#"> (20/12/1889)</a></li>
+						<li><span>Wasif </span><a href="#"> (30/01/1990)</a></li>
+						<li><span>John </span><a href="#"> (14/05/1991)</a></li>
+						<li><span>Robin </span><a href="#"> (20/12/1889)</a></li>
+						<li><span>Wasif </span><a href="#"> (30/01/1990)</a></li>
+						<li><span>John </span><a href="#"> (14/05/1991)</a></li>
+						<li><span>Robin </span><a href="#"> (20/12/1889)</a></li>
+						<li><span>Wasif </span><a href="#"> (30/01/1990)</a></li>
+						<li><span>John </span><a href="#"> (14/05/1991)</a></li>
+						<li><span>Robin </span><a href="#"> (20/12/1889)</a></li>
+						<li><span>Wasif </span><a href="#"> (30/01/1990)</a></li>
+					</ul>
 				</div>
 			</div>
 		</div>
