--- a/views/site/subject-wise.ejs
+++ b/views/site/subject-wise.ejs
@@ -6,20 +6,20 @@
     		<h1>Subject Wise <span class="main_color">Material</span></h1>
     	</div>
     </div>
-
+      
 	<div class="container-fluid side_tabbar my-3">
 		<div class="row">
 			<div class="col-md-12">
 				<nav aria-label="breadcrumb">
 				    <ol class="breadcrumb">
-				      <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+				      <li class="breadcrumb-item"><a href="/reb">Home</a></li>
 				      <li class="breadcrumb-item active" aria-current="page">Subject Wise</li>
 				    </ol>
 				</nav>
 			</div>
 			<div class="col-md-4 col-sm-4 col-xl-3">
 			  <div class="side_barheading">
-			  	<h6 href="subjectwise.html">Subject Wise <i class="fas fa-hand-point-right hand_icon"></i></h6>
+			  	<h6 href="subject-wise.ejs">Subject Wise <i class="fas fa-hand-point-right hand_icon"></i></h6>
 			  </div>
 			  <ul class="nav nav-tabs" id="myTab" role="tablist">
 				  <li class="nav-item">
@@ -72,7 +72,7 @@
 				<a href=""><i class="fas fa-chevron-right"></i> Medical Study Material</a>
 			  </div>
 			</div>
-			<div class="col-md-8 col-sm-8 col-xl-9">
+			<div class="col-md-4 col-sm-8 col-xl-6">
 				<div class="tab-content">
 					<div class="tab-pane active" id="activelink" role="tabpanel">
 						<div class="main_title">
@@ -80,23 +80,23 @@
 						</div>
 					  	<div class="text-center mb-2">
 					  		<div class="form-row">
-						  		<div class="col-md-4 col-sm-6 col-lg-3">
+						  		<div class="col-md-6 col-sm-6 col-lg-4">	
 									<div class="subject_box">
-									  <a href=""><div class="subject_icon">
+									  <a href="#"><div class="subject_icon">
 										<i class="fas fa-at"></i>
 									  </div><br>
 									  <h5>Force</h5></a>
 									</div>
 								</div>
-								<div class="col-md-4 col-sm-6 col-lg-3">
+								<div class="col-md-6 col-sm-6 col-lg-4">	
 									<div class="subject_box">
-									  <a href=""><div class="subject_icon">
+									  <a href="subject-topic"><div class="subject_icon">
 										<i class="fas fa-at"></i>
 									  </div><br>
 									  <h5>Gravtiation</h5></a>
 									</div>
 								</div>
-								<div class="col-md-4 col-sm-6 col-lg-3">
+								<div class="col-md-6 col-sm-6 col-lg-4">	
 									<div class="subject_box">
 									  <a href=""><div class="subject_icon">
 										<i class="fas fa-at"></i>
@@ -104,7 +104,7 @@
 									  <h5>Magnetism</h5></a>
 									</div>
 								</div>
-								<div class="col-md-4 col-sm-6 col-lg-3">
+								<div class="col-md-6 col-sm-6 col-lg-4">	
 									<div class="subject_box">
 									  <a href=""><div class="subject_icon">
 										<i class="fas fa-at"></i>
@@ -112,7 +112,7 @@
 									  <h5>Atoms</h5></a>
 									</div>
 								</div>
-								<div class="col-md-4 col-sm-6 col-lg-3">
+								<div class="col-md-6 col-sm-6 col-lg-4">	
 									<div class="subject_box">
 									  <a href=""><div class="subject_icon">
 										<i class="fas fa-at"></i>
@@ -129,7 +129,7 @@
 					</div>
 					<div class="text-center mb-2">
 						<div class="form-row">
-							<div class="col-md-4 col-sm-6 col-lg-3">
+							<div class="col-md-6 col-sm-6 col-lg-4">	
 								<div class="subject_box">
 								  <a href=""><div class="subject_icon">
 									<i class="fas fa-at"></i>
@@ -137,7 +137,7 @@
 								  <h5>Force</h5></a>
 								</div>
 							</div>
-							<div class="col-md-4 col-sm-6 col-lg-3">
+							<div class="col-md-6 col-sm-6 col-lg-4">	
 								<div class="subject_box">
 								  <a href=""><div class="subject_icon">
 									<i class="fas fa-at"></i>
@@ -145,7 +145,7 @@
 								  <h5>Gravtiation</h5></a>
 								</div>
 							</div>
-							<div class="col-md-4 col-sm-6 col-lg-3">
+							<div class="col-md-6 col-sm-6 col-lg-4">	
 								<div class="subject_box">
 								  <a href=""><div class="subject_icon">
 									<i class="fas fa-at"></i>
@@ -153,7 +153,7 @@
 								  <h5>Magnetism</h5></a>
 								</div>
 							</div>
-							<div class="col-md-4 col-sm-6 col-lg-3">
+							<div class="col-md-6 col-sm-6 col-lg-4">	
 								<div class="subject_box">
 								  <a href=""><div class="subject_icon">
 									<i class="fas fa-at"></i>
@@ -161,7 +161,7 @@
 								  <h5>Atoms</h5></a>
 								</div>
 							</div>
-							<div class="col-md-4 col-sm-6 col-lg-3">
+							<div class="col-md-6 col-sm-6 col-lg-4">	
 								<div class="subject_box">
 								  <a href=""><div class="subject_icon">
 									<i class="fas fa-at"></i>
@@ -183,6 +183,53 @@
 				  <div class="tab-pane" id="link10" role="tabpanel">.11..</div>
 				</div>
 			</div>
+			<div class="col-md-4 col-sm-4 col-xl-3">
+				<h1 class="blog_heading">Latest Blogs</h1>
+				<div class="latest_blog">
+					<ul id="ticker01">
+						<li><span>Heading</span><br><a href="#">The first thing that most Javascript programmers</a></li>
+						<li><span>Heading</span><br><a href="#">End up doing is adding some code</a></li>
+						<li><span>Heading</span><br><a href="#">The code that you want to run</a></li>
+						<li><span>Heading</span><br><a href="#">Inside of which is the code that you want to run</a></li>
+						<li><span>Heading</span><br><a href="#">Right when the page is loaded</a></li>
+						<li><span>Heading</span><br><a href="#">Problematically, however, the Javascript code</a></li>
+						<li><span>Heading</span><br><a href="#">The first thing that most Javascript programmers</a></li>
+						<li><span>Heading</span><br><a href="#">End up doing is adding some code</a></li>
+						<li><span>Heading</span><br><a href="#">The code that you want to run</a></li>
+						<li><span>Heading</span><br><a href="#">Inside of which is the code that you want to run</a></li>
+						<li><span>Heading</span><br><a href="#">Right when the page is loaded</a></li>
+						<li><span>Heading</span><br><a href="#">Problematically, however, the Javascript code</a></li>
+					</ul>
+				</div>
+				
+				<h1 class="blog_heading mt-3">Birth of Star</h1>
+				<div class="latest_blog">
+					<ul id="ticker01">
+						<li><span>John </span><a href="#"> (14/05/1991)</a></li>
+						<li><span>Robin </span><a href="#"> (20/12/1889)</a></li>
+						<li><span>Wasif </span><a href="#"> (30/01/1990)</a></li>
+						<li><span>John </span><a href="#"> (14/05/1991)</a></li>
+						<li><span>Robin </span><a href="#"> (20/12/1889)</a></li>
+						<li><span>Wasif </span><a href="#"> (30/01/1990)</a></li>
+						<li><span>John </span><a href="#"> (14/05/1991)</a></li>
+						<li><span>Robin </span><a href="#"> (20/12/1889)</a></li>
+						<li><span>Wasif </span><a href="#"> (30/01/1990)</a></li>
+						<li><span>John </span><a href="#"> (14/05/1991)</a></li>
+						<li><span>Robin </span><a href="#"> (20/12/1889)</a></li>
+						<li><span>Wasif </span><a href="#"> (30/01/1990)</a></li>
+						<li><span>John </span><a href="#"> (14/05/1991)</a></li>
+						<li><span>Robin </span><a href="#"> (20/12/1889)</a></li>
+						<li><span>Wasif </span><a href="#"> (30/01/1990)</a></li>
+						<li><span>John </span><a href="#"> (14/05/1991)</a></li>
+						<li><span>Robin </span><a href="#"> (20/12/1889)</a></li>
+						<li><span>Wasif </span><a href="#"> (30/01/1990)</a></li>
+						<li><span>John </span><a href="#"> (14/05/1991)</a></li>
+						<li><span>Robin </span><a href="#"> (20/12/1889)</a></li>
+						<li><span>Wasif </span><a href="#"> (30/01/1990)</a></li>
+					</ul>
+				</div>
+			</div>
 		</div>
 	</div>
+
     <%- include ../sitelayouts/footer.ejs %>
