--- a/views/sitelayouts/header.ejs
+++ b/views/sitelayouts/header.ejs
@@ -33,7 +33,7 @@
               <a class="nav-link" href="#">Test Urself</a>
             </li>
 			<li class="nav-item">
-              <a class="nav-link" href="#">Career Guidance</a>
+              <a class="nav-link" href="/reb/career-guidance">Career Guidance</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Entrance Exams</a>
