--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
     		</div>
 		    <div class="col-md-7 col-lg-9 col-sm-7">
 				<div class="main_title">
-					<a href="/reb/subject-wise">Subject Wise</a>
+					<a href="subject-wise">Subject Wise</a>
 				</div>
 				<div id="owl-demo" class="text-center">
 					<div class="item">
@@ -152,7 +152,7 @@
 					</div>
 				</div>
 				<div class="col-md-5 col-lg-3 col-sm-5 d-none d-sm-block category_img">
-    				<a href="/reb/class-wise"><img class="img-fluid" src="../images/3.jpg" alt=""></a>
+    				<a href="class-wise"><img class="img-fluid" src="../images/3.jpg" alt=""></a>
     			</div>
 			</div>
 		</div>
@@ -165,7 +165,7 @@
 			</div>
 			<div class="col-md-7 col-lg-9 col-sm-7">
 				<div class="main_title">
-					<a href="/reb/board-material">Study Material By Board</a>
+					<a href="board-material">Study Material By Board</a>
 				</div>
 				<div id="owl-demo" class="text-center">
 					<div class="item">
@@ -234,7 +234,7 @@
 	    	<div class="row">
 				<div class="col-md-7 col-lg-9 col-sm-7">
 					<div class="main_title text-right">
-						<a href="/reb/entranc-exam">Entrance Exam Wise</a>
+						<a href="entranc-exam">Entrance Exam Wise</a>
 					</div>
 					<div id="owl-demo" class="text-center">
 						<div class="item">
