--- a/views/site/board-material.ejs
+++ b/views/site/board-material.ejs
@@ -12,7 +12,7 @@
 			<div class="col-md-12">
 				<nav aria-label="breadcrumb">
 				    <ol class="breadcrumb">
-				      <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+				      <li class="breadcrumb-item"><a href="/">Home</a></li>
 				      <li class="breadcrumb-item active" aria-current="page">Study Material By Board</li>
 				    </ol>
 				</nav>
@@ -45,9 +45,9 @@
 				  </li>
 			  </ul>
 			  <div class="filter_bar">
-			  	<a href="subject-wise"><i class="fas fa-chevron-right"></i> Subject Wise</a>
-			  	<a href="class-wise"><i class="fas fa-chevron-right"></i> Class Wise</a>
-			  	<a href="entranc-exam"><i class="fas fa-chevron-right"></i> Extrance Exam Wise</a>
+			  	<a href="/subject-wise"><i class="fas fa-chevron-right"></i> Subject Wise</a>
+			  	<a href="/class-wise"><i class="fas fa-chevron-right"></i> Class Wise</a>
+			  	<a href="/entranc-exam"><i class="fas fa-chevron-right"></i> Extrance Exam Wise</a>
 			  	<a href=""><i class="fas fa-chevron-right"></i> GOVT. Exam Wise</a>
 			  	<a href=""><i class="fas fa-chevron-right"></i> UR Interset Wise</a>
 				<a href=""><i class="fas fa-chevron-right"></i> Engineering Study Material</a>
@@ -58,7 +58,7 @@
 				<div class="tab-content">
 					<div class="tab-pane active" id="activelink" role="tabpanel">
 						<div class="main_title">
-							<a href="cbseboard.html">CBSE</a>
+							<a href="cbse-board">CBSE</a>
 						</div>
 					  	<div id="owl-demo" class="text-center">
 							<div class="item">
