--- a/views/sitelayouts/header.ejs
+++ b/views/sitelayouts/header.ejs
@@ -14,7 +14,7 @@
     <!-- Navbar Section Start -->
     <nav class="navbar navbar-expand-lg navbar-light bg-white custom_menu sticky-top">
       <div class="container-fluid">
-        <a class="navbar-brand text-danger" href="/reb"><img src="../images/site-logo.PNG" alt="" width="130"></a>
+        <a class="navbar-brand text-danger" href="/"><img src="../images/site-logo.PNG" alt="" width="130"></a>
          <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="icon-bar top-bar"></span>
           <span class="icon-bar middle-bar"></span>
@@ -33,7 +33,7 @@
               <a class="nav-link" href="#">Test Urself</a>
             </li>
 			<li class="nav-item">
-              <a class="nav-link" href="/reb/career-guidance">Career Guidance</a>
+              <a class="nav-link" href="career-guidance">Career Guidance</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Entrance Exams</a>
