--- a/views/site/career-guidance.ejs
+++ b/views/site/career-guidance.ejs
@@ -22,7 +22,7 @@
     		</div>
 		    <div class="col-md-7 col-lg-9 col-sm-7">
 				<div class="main_title">
-					<a href="subject-wise">Career After Class 10</a>
+					<a href="#">Career After Class 10</a>
 				</div>	
 				<div id="owl-demo" class="text-center">        
 					<div class="item">
@@ -91,7 +91,7 @@
 	    	<div class="row">
 				<div class="col-md-7 col-lg-9 col-sm-7">
 					<div class="main_title text-right">
-						<a href="class-wise">Career After Class 12</a>
+						<a href="#">Career After Class 12</a>
 					</div>
 					<div id="owl-demo" class="text-center">        
 						<div class="item">
@@ -153,7 +153,7 @@
 					</div>
 				</div>
 				<div class="col-md-5 col-lg-3 col-sm-5 d-none d-sm-block category_img">
-    				<a href="subjectwise.html"><img class="img-fluid" src="../images/3.jpg" alt=""></a>
+    				<a href="#"><img class="img-fluid" src="../images/3.jpg" alt=""></a>
     			</div>
 			</div>
 		</div>
@@ -297,7 +297,7 @@
 					</div>
 				</div>
 				<div class="col-md-5 col-lg-3 col-sm-5 d-none d-sm-block category_img">
-    				<a href="entrancexam.html"><img class="img-fluid" src="../images/7.jpg" alt=""></a>
+    				<a href="#"><img class="img-fluid" src="../images/7.jpg" alt=""></a>
     			</div>
 			</div>
 		</div>
