--- a/views/site/subject-topic.ejs
+++ b/views/site/subject-topic.ejs
@@ -12,7 +12,7 @@
 			<div class="col-md-12">
 				<nav aria-label="breadcrumb">
 				    <ol class="breadcrumb">
-				      <li class="breadcrumb-item"><a href="/reb">Home</a></li>
+				      <li class="breadcrumb-item"><a href="/">Home</a></li>
 					  <li class="breadcrumb-item"><a href="subject-wise">Subject Wise</a></li>
 					  <li class="breadcrumb-item"><a href="#">Subject Sub Category</a></li>
 				      <li class="breadcrumb-item active" aria-current="page">Gravtiation Notes</li>
