--- a/views/index.ejs
+++ b/views/index.ejs
@@ -90,7 +90,7 @@
 	    	<div class="row">
 				<div class="col-md-7 col-lg-9 col-sm-7">
 					<div class="main_title text-right">
-						<a href="/reb/class-wise">Class Wise</a>
+						<a href="class-wise">Class Wise</a>
 					</div>
 					<div id="owl-demo" class="text-center">
 						<div class="item">
