--- a/views/site/blog_subject_topic.ejs
+++ b/views/site/blog_subject_topic.ejs
@@ -12,9 +12,8 @@
 			<div class="col-md-12">
 				<nav aria-label="breadcrumb">
 				    <ol class="breadcrumb">
-				      <li class="breadcrumb-item"><a href="/">Home</a></li>
-					  <li class="breadcrumb-item"><a href="subject-wise">Subject Wise</a></li>
-					  <li class="breadcrumb-item"><a href="#">Subject Sub Category</a></li>
+				      <li class="breadcrumb-item"><a href="blog-discussion">Home</a></li>
+					  <li class="breadcrumb-item"><a href="blog_subjectwise">Subject Wise</a></li>
 				      <li class="breadcrumb-item active" aria-current="page">Gravtiation Notes</li>
 				    </ol>
 				</nav>
@@ -59,9 +58,9 @@
 				  </li>
 			  </ul>
 			  <div class="filter_bar">
-			  	<a href="class-wise"><i class="fas fa-chevron-right"></i> Class Wise</a>
-			  	<a href="board-material"><i class="fas fa-chevron-right"></i> Study Material By Board</a>
-			  	<a href="entranc-exam"><i class="fas fa-chevron-right"></i> Extrance Exam Wise</a>
+			  	<a href="#"><i class="fas fa-chevron-right"></i> Class Wise</a>
+			  	<a href="#"><i class="fas fa-chevron-right"></i> Study Material By Board</a>
+			  	<a href="#"><i class="fas fa-chevron-right"></i> Extrance Exam Wise</a>
 			  	<a href=""><i class="fas fa-chevron-right"></i> GOVT. Exam Wise</a>
 			  	<a href=""><i class="fas fa-chevron-right"></i> UR Interset Wise</a>
 				<a href=""><i class="fas fa-chevron-right"></i> Engineering Study Material</a>
@@ -265,4 +264,5 @@
 			</div>
 		</div>
 	</div>
- <%- include ../sitelayouts/footer.ejs %>
+	
+   <%- include ../sitelayouts/footer.ejs %>
