--- a/views/sitelayouts/header.ejs
+++ b/views/sitelayouts/header.ejs
@@ -24,22 +24,22 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarResponsive">
           <ul class="navbar-nav ">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Study Material</a>
+              <a class="nav-link" href="/">Study Material</a>
             </li>
 			<li class="nav-item">
-              <a class="nav-link" href="#">Test Urself</a>
+              <a class="nav-link" href="text_urself">Test Urself</a>
             </li>
 			<li class="nav-item">
               <a class="nav-link" href="career-guidance">Career Guidance</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Entrance Exams</a>
+              <a class="nav-link" href="entrance_exam">Entrance Exams</a>
             </li>
 			<li class="nav-item">
-              <a class="nav-link" href="#">Blogs & Discussions</a>
+              <a class="nav-link" href="blog-discussion">Blogs & Discussions</a>
             </li>
           </ul>
           <form class="form-inline my-2 ml-3 my-lg-0">
