--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -412,7 +412,7 @@ a:hover, a:focus{
     padding: 8px 4px 8px 11px;
     color: var(--black-color);
     margin-bottom: 0px;
-    font-size: 17px;
+    font-size: 16px;
 	text-transform: uppercase;
 }
 .filter_bar a:last-child{
@@ -588,6 +588,7 @@ a:hover, a:focus{
 }
 .topics p{
 	margin-bottom:5px;
+	font-size: 15px;
 }
 
 /*.accordion .card-header:after {
@@ -601,7 +602,7 @@ a:hover, a:focus{
 .custom_accordion .card-header {
 
     padding: 10px 15px;
-    background-color: #ccc;
+    background-color: var(--light-color);
     border-bottom: 1px dotted var(--main-color);
 	border-radius: 0px;
 
@@ -612,34 +613,58 @@ a:hover, a:focus{
 	color:var(--main-color);
 }
 .custom_accordion .card-title{
-	font-size:17px;
+	font-size:16px;
 }
 .tab_border{
 	border:1px solid var(--light-border);
+	border-top:none;
 }
 .institute_name{
 	background:var(--light-color);
 	padding:5px 5px 10px;
 }
-.institute_name a{
-	font-size:14px;
+.institute_name a {
+    font-size: 14px;
+    color: var(--black-color);
+    border-bottom: 1px dotted var(--main-color);
+    padding: 8px 0;
+    display: block;
 }
 
 .more_links{
 	background:var(--light-color);
-	padding:5px 5px 25px;
+	padding:5px 5px 5px;
+	display: inline-block; 	
 }
 .more_links a{
-	font-size:14px;
+	font-size:12px;
 	display:inline-block;
-	padding:8px 20px;
+	padding:8px 10px;
 	color:var(--black-color);
+	width: 155px;
+
+float: left;
 }
 .more_view{
-	margin-top:-12px;
+	margin-top:30px;
 }
 .more_links a:hover{
 	color:#007bff;
+}
+
+.slect_otherexams{
+    margin-bottom: 10px;
+    border:2px dotted var(--main-color);
+    padding: 10px 10px;
+	box-shadow: 0px 0px 7px 0px var(--light-border);
+	background-image: linear-gradient(to bottom right, #78b5df, #3b9ddf);
+	display: table;
+	width: 100%;
+}
+.slect_otherexams h2{
+    color: var(--light-color);
+    font-size: 14px;
+	margin-bottom:0px;
 }
 
 
