--- a/views/site/text_urself.ejs
+++ b/views/site/text_urself.ejs
@@ -9,7 +9,7 @@
       <div class="container h-100">
         <div class="d-flex text-center h-100">
           <div class="my-auto w-100 text-white">
-            <h1 class="display-3 text-uppercase font-weight-bold">  Test <b class="main_color">UR Self</b></h1>
+            <h1 class="display-3 text-uppercase font-weight-bold">  Test <b class="main_color">Yourself</b></h1>
           </div>
         </div>
       </div>
