--- a/views/adminlayouts/header.ejs
+++ b/views/adminlayouts/header.ejs
@@ -257,7 +257,7 @@ desired effect
         <li class="header">HEADER</li>
         <!-- Optionally, you can add icons to the links -->
         <li class="active"><a href="#"><i class="fa fa-link"></i> <span>Link</span></a></li>
-        <li><a href="dashboard/add-book"><i class="fa fa-link"></i> <span>Add Book</span></a></li>
+        <li><a href="dashboard/"><i class="fa fa-link"></i> <span>Add Book</span></a></li>
         <li class="treeview">
           <a href="#"><i class="fa fa-link"></i> <span>Multilevel</span>
             <span class="pull-right-container">
