--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -32,10 +32,16 @@
   <!-- /.login-logo -->
   <div class="login-box-body">
     <p class="login-box-msg">Log in to Continue</p>
+	<% if (messages.error) { %>
+             <p style="color:red"><%- messages.error %></p>
+         <% } %>
 
-    <form action="/admin/login/usie"  name="form2" id="myform">
+         <% if (messages.success) { %>
+             <p style="color:green"><%- messages.success %></p>
+         <% } %>
+    <form action="/admin/login"  name="form2" method="" id="myform">
       <div class="form-group has-feedback">
-        <input type="email" name="email" class="form-control" placeholder="Email">
+        <input type="text" name="username" class="form-control" placeholder="UserName">
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
       </div>
       <div class="form-group has-feedback">
@@ -43,13 +49,6 @@
         <span class="glyphicon glyphicon-lock form-control-feedback"></span>
       </div>
       <div class="row">
-        <div class="col-xs-8">
-          <div class="checkbox icheck">
-            <label>
-              <input type="checkbox"> Remember Me
-            </label>
-          </div>
-        </div>
         <!-- /.col -->
         <div class="col-xs-4">
           <button type="submit" class="btn btn-primary btn-block btn-flat" >Sign In</button>
@@ -81,38 +80,6 @@
 <script src="../admin/bootstrap/js/bootstrap.min.js"></script>
 <!-- iCheck -->
 <script src="../admin/plugins/iCheck/icheck.min.js"></script>
-<script>
-  $(function () {
-    $('input').iCheck({
-      checkboxClass: 'icheckbox_square-blue',
-      radioClass: 'iradio_square-blue',
-      increaseArea: '20%' // optional
-    });
-  });
-</script>
-  <script>
-     $(document).on('submit','#myform',function(e){
-       // alert('ok');
-                    e.preventDefault();
-                    var formData = new FormData(this);                  
-                    $.ajax({
-                        type:'POST',
-                        url:$(this).attr('action'),
-                        data:formData,
-                        cashe:false,
-                        contentType:false,
-                        processData:false,                      
-                        success:function(data){
-                            data = JSON.parse(data);
-                            alert(data.message);
-                            location.reload();
-                        },
-                        error:function(data){
-                            data = JSON.parse(data);
-                            alert(data.message);
-                        }
-                    });
-                });
-    </script>
+
 </body>
 </html>
