--- a/views/adminlayouts/header.ejs
+++ b/views/adminlayouts/header.ejs
@@ -199,7 +199,9 @@
             <li><a href="#">Teacher List</a></li>
           </ul>
         </li>
+        <li class="active"><a href="/admin/logout"><i class="fa fa-sign-out"></i> <span>Logout</span></a></li>
       </ul>
+
       <!-- /.sidebar-menu -->
     </section>
     <!-- /.sidebar -->
