--- a/views/adminlayouts/header.ejs
+++ b/views/adminlayouts/header.ejs
@@ -50,7 +50,7 @@
               </li>
             </ul>
           </li>
-       
+
         </ul>
       </div>
     </nav>
@@ -68,12 +68,12 @@
         </div>
         <div class="pull-left info">
           <p>Alexander Pierce</p> -->
-          <!-- Status 
+          <!-- Status
           <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
         </div>
       </div>
 
-      <!-- search form (Optional) 
+      <!-- search form (Optional)
       <form action="#" method="get" class="sidebar-form">
         <div class="input-group">
           <input type="text" name="q" class="form-control" placeholder="Search...">
@@ -90,7 +90,7 @@
         <li class="header">HEADER</li>
         <!-- Optionally, you can add icons to the links -->
         <li class="active"><a href="#"><i class="fa fa-home"></i> <span>Home</span></a></li>
-        
+
         <li class="treeview">
           <a href="#"><i class="fa fa-users"></i> <span>User</span>
             <span class="pull-right-container">
@@ -110,8 +110,8 @@
           </a>
           <ul class="treeview-menu">
             <li><a href="add-category">Category</a></li>
-            <li><a href="#">Sub Category</a></li>
-            <li><a href="#">Nano Category</a></li>
+            <li><a href="add_sub_category">Sub Category</a></li>
+            <li><a href="add_nano_category">Nano Category</a></li>
           </ul>
         </li>
         <li class="treeview">
@@ -126,15 +126,15 @@
           </ul>
         </li>
         <li class="treeview">
-          <a href="#"><i class="fa fa-plus-square-o"></i> <span>Content</span>
+          <a href="add-content"><i class="fa fa-plus-square-o"></i> <span>Content</span>
             <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="#">Add New Content</a></li>
-            <li><a href="#">View Page</a></li>
-            <li><a href="#">Content List</a></li>
+            <li><a href="add-content">Add New Content</a></li>
+            <li><a href="content-list">View Page</a></li>
+            <li><a href="content-list">Content List</a></li>
           </ul>
         </li> <li class="treeview">
           <a href="#"><i class="fa fa-bolt"></i> <span>Eligibilites</span>
