--- a/views/adminlayouts/header.ejs
+++ b/views/adminlayouts/header.ejs
@@ -5,11 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Revoedubook</title>
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-  <link rel="stylesheet" href="../admin/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../../admin/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-  <link rel="stylesheet" href="../admin/dist/css/AdminLTE.min.css">
-  <link rel="stylesheet" href="../admin/dist/css/skins/skin-blue.min.css">
+  <link rel="stylesheet" href="../../admin/dist/css/AdminLTE.min.css">
+  <link rel="stylesheet" href="../../admin/dist/css/skins/skin-blue.min.css">
   <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -121,8 +121,30 @@
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="#">Add New Class</a></li>
-            <li><a href="#">Class List</a></li>
+            <li><a href="/admin/class/addclass">Add New Class</a></li>
+            <li><a href="/admin/class/class-list">Class List</a></li>
+          </ul>
+        </li>
+        <li class="treeview">
+          <a href="#"><i class="fa fa-clone"></i> <span>Boards</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            <li><a href="/admin/board/addboard">Add New board</a></li>
+            <li><a href="/admin/board/board-list">board List</a></li>
+          </ul>
+        </li>
+        <li class="treeview">
+          <a href="#"><i class="fa fa-clone"></i> <span>Subject</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            <li><a href="/admin/subject/addsubject">Add New Subject</a></li>
+            <li><a href="/admin/subject/subject-list">Subjects List</a></li>
           </ul>
         </li>
         <li class="treeview">
