--- a/views/adminlayouts/header.ejs
+++ b/views/adminlayouts/header.ejs
@@ -148,6 +148,17 @@
           </ul>
         </li>
         <li class="treeview">
+          <a href="#"><i class="fa fa-clone"></i> <span>Topic</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            <li><a href="/admin/topic/addtopic">Add New Topic</a></li>
+            <li><a href="/admin/topic/topic-list">Topics List</a></li>
+          </ul>
+        </li>
+        <li class="treeview">
           <a href="add-content"><i class="fa fa-plus-square-o"></i> <span>Content</span>
             <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
