--- a/views/sitelayouts/header.ejs
+++ b/views/sitelayouts/header.ejs
@@ -30,7 +30,7 @@
               <a class="nav-link" href="/">Study Material</a>
             </li>
 			<li class="nav-item">
-              <a class="nav-link" href="text_urself">Test Yourself</a>
+              <a class="nav-link" href="test_your_self">Test Yourself</a>
             </li>
 			<li class="nav-item">
               <a class="nav-link" href="career-guidance">Career Guidance</a>
