--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ a:hover, a:focus{
     margin-bottom: 18px;
 }
 .main_title a {
-    font-size: 16px;
+    font-size: 15px;
     margin-bottom: 0px;
     display: inline-block;
     color: var(--light-color);
@@ -171,6 +171,17 @@ a:hover, a:focus{
 .next_pre_icon .fa-angle-left{
 	right:55px;
 }
+.product_icon h1 {
+    font-size: 32px;
+    font-weight: 600;
+    margin-bottom: 0;
+    padding: 10px 0px 13px;
+    text-align: center;
+	transition:.9s;
+}
+.section_box:hover .product_icon > h1{
+	transform: rotate(360deg);
+}
 .product_icon {
     width: 60px;
     color: #fff;
@@ -180,6 +191,7 @@ a:hover, a:focus{
     display: inline-block;
     margin: 5px 0px 15px;
     background-color: var(--main-color);
+
 }
 .owl-item:nth-child(odd) .product_icon {
     background: #05a0e6;
@@ -205,6 +217,19 @@ a:hover, a:focus{
 	text-transform:uppercase;
     color: var(--black-color);
     font-size: 16px;
+}
+#owl-demo .item{
+	display:table;
+	width:100%;
+}
+.section_box {
+    background: #eee;
+    margin: 110px;
+    height: 170px;
+    display: table-cell;
+    vertical-align: middle;
+    padding: 0px;
+    border: 1px solid #fff;
 }
 .owl-prev {
     display: inline-block;
@@ -312,7 +337,7 @@ a:hover, a:focus{
     border-top-left-radius: 0rem!important;
     border-top-right-radius: 0rem!important;
     color: var(--black-color);
-    font-size: 15px;
+    font-size: 14px;
     padding-left: 10px;
     transition: .6s;
 }
@@ -383,7 +408,7 @@ a:hover, a:focus{
 	border-bottom: 1px solid var(--light-border);
     padding: 12px 4px 12px 11px;
     color: var(--light-color);
-    font-size: 17px;
+    font-size: 16px;
 	background: var(--main-color);
 	text-transform: uppercase;
 	font-weight: bold;
@@ -412,7 +437,7 @@ a:hover, a:focus{
     padding: 8px 4px 8px 11px;
     color: var(--black-color);
     margin-bottom: 0px;
-    font-size: 16px;
+    font-size: 15px;
 	text-transform: uppercase;
 }
 .filter_bar a:last-child{
@@ -430,13 +455,14 @@ a:hover, a:focus{
     margin-bottom: 10px;
     border:1px solid var(--light-border);
     padding: 10px 10px;
-	box-shadow: 0px 0px 7px 0px var(--light-border);
-	background-image: linear-gradient(to bottom right, #78b5df, #3b9ddf);
+	box-shadow: 0px 0px 5px 0px var(--light-border);
+	background-image: var(--light-color);
 	display: table;
 	width: 100%;
 }
 .topics .subject_box{
 	border:2px dotted var(--main-color);
+	background-image: linear-gradient(to bottom right, #78b5df, #3b9ddf);
 }
 
 .subject_icon {
@@ -456,11 +482,11 @@ a:hover, a:focus{
 }
 .subject_box h2{
     color: var(--light-color);
-    font-size: 20px;
+    font-size: 18px;
 	margin-bottom:0px;
 }
 .subject_box h3{
-    color: var(--light-color);
+    color: var(--black-color);
     font-size: 20px;
 	margin-bottom:0px;
 	min-height: 60px;
@@ -590,22 +616,11 @@ a:hover, a:focus{
 	margin-bottom:5px;
 	font-size: 15px;
 }
-
-/*.accordion .card-header:after {
-    font-family: 'FontAwesome';  
-    content: "\f068";
-    float: right; 
-}
-.accordion .card-header.collapsed:after {
-    content: "\f067"; 
-}*/
 .custom_accordion .card-header {
-
     padding: 10px 15px;
     background-color: var(--light-color);
     border-bottom: 1px dotted var(--main-color);
 	border-radius: 0px;
-
 }
 .custom_accordion .card-header i{
 	float:right;
@@ -630,7 +645,6 @@ a:hover, a:focus{
     padding: 8px 0;
     display: block;
 }
-
 .more_links{
 	background:var(--light-color);
 	padding:5px 5px 5px;
@@ -642,8 +656,7 @@ a:hover, a:focus{
 	padding:8px 10px;
 	color:var(--black-color);
 	width: 155px;
-
-float: left;
+	float: left;
 }
 .more_view{
 	margin-top:30px;
@@ -665,6 +678,193 @@ float: left;
     color: var(--light-color);
     font-size: 14px;
 	margin-bottom:0px;
+}
+
+
+/*--------- Quiz Test --------*/
+.left_linkbtn{
+	background:var(--light-color);
+	padding:15px 5px 10px;
+	text-align:center;
+}
+.left_linkbtn a {
+    font-size: 14px;
+    color: var(--black-color);
+    padding: 5px 15px;
+    display: inline-block;
+	margin-bottom:6px;
+	background:#fff;
+	border-radius: 40px;
+}
+#qid {
+  padding: 10px 15px;
+  border-radius: 20px;
+}
+.quiz_test label.btn {
+    padding: 12px 30px;
+    white-space: normal;
+    transform: scale(1.0);
+    transition: .3s;
+}
+.quiz_test{
+	margin-top:0px;
+}
+.quiz_test label.btn:hover {
+    text-shadow: 0 3px 2px rgba(0,0,0,0.4);
+    transform: scale(1.1);
+}
+.quiz_test label.btn-block {
+    text-align: left;
+    position: relative;
+    width: 44%;
+    float: left;
+    margin: 3% 3%;
+	background-image: linear-gradient(to bottom right, #78b5df, #3b9ddf);
+	border: none;
+	border-radius: 0;
+}
+.btn-block + .btn-block {
+    margin-top: 0px;
+}
+.quiz_test input[type="checkbox"], input[type="radio"] {
+    margin-right: 10px;
+}
+
+.quiz_test label .btn-label {
+    position: absolute;
+    left: 0;
+    top: 0;
+    display: inline-block;
+    padding: 0 10px;
+    background: rgba(0,0,0,.15);
+    height: 100%
+}
+
+.quiz_test label .glyphicon {
+    top: 34%
+}
+.element-animation1 {
+    animation: animationFrames ease .8s;
+    animation-iteration-count: 1;
+    transform-origin: 50% 50%;
+}
+.element-animation2 {
+    animation: animationFrames ease 1s;
+    animation-iteration-count: 1;
+    transform-origin: 50% 50%;
+}
+.element-animation3 {
+    animation: animationFrames ease 1.2s;
+    animation-iteration-count: 1;
+    transform-origin: 50% 50%;
+}
+.element-animation4 {
+    animation: animationFrames ease 1.4s;
+    animation-iteration-count: 1;
+    transform-origin: 50% 50%;
+}
+@keyframes animationFrames {
+    0% {
+        opacity: 0;
+        transform: translate(-1500px,0px)
+    }
+
+    60% {
+        opacity: 1;
+        transform: translate(30px,0px)
+    }
+
+    80% {
+        transform: translate(-10px,0px)
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0px,0px)
+    }
+}
+.quiz_test .modal-header {
+    background-color: var(--light-colorx);
+    color: inherit;
+	padding: 15px 0;
+}
+.quiz_test .modal-body {
+    min-height: 185px
+}
+#loadbar {
+    position: absolute;
+    width: 62px;
+    height: 77px;
+    top: 2em
+}
+.blockG {
+    position: absolute;
+    background-color: #FFF;
+    width: 10px;
+    height: 24px;
+    border-radius: 8px 8px 0 0;
+    transform: scale(0.4);
+    animation-name: fadeG;
+    animation-duration: .8800000000000001s;
+    animation-iteration-count: infinite;
+    animation-direction: linear
+}
+#rotateG_01 {
+    left: 0;
+    top: 28px;
+    animation-delay: .33s;
+    transform: rotate(-90deg)
+}
+#rotateG_02 {
+    left: 8px;
+    top: 10px;
+    animation-delay: .44000000000000006s;
+    transform: rotate(-45deg)
+}
+#rotateG_03 {
+    left: 26px;
+    top: 3px;
+    animation-delay: .55s;
+    transform: rotate(0deg)
+}
+#rotateG_04 {
+    right: 8px;
+    top: 10px;
+    animation-delay: .66s;
+    transform: rotate(45deg)
+}
+#rotateG_05 {
+    right: 0;
+    top: 28px;
+    animation-delay: .7700000000000001s;
+    transform: rotate(90deg)
+}
+#rotateG_06 {
+    right: 8px;
+    bottom: 7px;
+    animation-delay: .8800000000000001s;
+    transform: rotate(135deg)
+}
+#rotateG_07 {
+    bottom: 0;
+    left: 26px;
+    animation-delay: .99s;
+    transform: rotate(180deg)
+}
+#rotateG_08 {
+    left: 8px;
+    bottom: 7px;
+    animation-delay: 1.1s;
+    transform: rotate(-135deg)
+}
+@keyframes fadeG {
+    0% {
+        background-color: #000
+    }
+
+    100% {
+        background-color: #FFF
+    }
 }
 
 
@@ -746,4 +946,32 @@ float: left;
   .main_video h1{
       font-size: 28px;
   }
+  .pagesub_heading h1 {
+    font-size: 28px;
+    text-align: center;
+	}
+	.pagesub_heading {
+		width:100%;
+	}
+}
+@media only screen and (max-width: 575px) {
+  .pagesub_heading h1 {
+		font-size: 20px;
+		text-align: center;
+	}
+	.pagesub_heading {
+		width:100%;
+	}
+	.side_barheading h6::after {
+		display:none;
+	}
+	.side_tabbar{
+		margin-bottom:20px;
+	}
+	.quiz_test label .btn-label {
+		padding: 0 5px  !important;
+	}
+	.quiz_test label.btn {
+		padding: 12px 15px !important;
+	}
 }
