--- a/views/site/test_your_self.ejs
+++ b/views/site/test_your_self.ejs
@@ -1,30 +1,30 @@
-<%- include sitelayouts/header.ejs %>
+<%- include ../sitelayouts/header.ejs %>
+
     <div class="main_video">
       <div class="overlay"></div>
       <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-        <source src="video/ADRA Animated Short- Education.mp4" type="video/mp4">
-          <source src="video/mov_bbb.ogg" type="video/ogg">
+        <source src="../video/ADRA Animated Short- Education.mp4" type="video/mp4">
+          <source src="../video/mov_bbb.ogg" type="video/ogg">
       </video>
       <div class="container h-100">
         <div class="d-flex text-center h-100">
           <div class="my-auto w-100 text-white">
-            <h1 class="display-3 text-uppercase font-weight-bold">Study <b class="main_color">Material</b></h1>
+            <h1 class="display-3 text-uppercase font-weight-bold">  Test <b class="main_color">Yourself</b></h1>
           </div>
         </div>
       </div>
     </div>
 
-         
-    <div class="container-fluid my-4">
+   <div class="container-fluid my-4">
     	<div class="row">
     		<div class="col-md-5 col-lg-3 col-sm-5 d-none d-sm-block category_img">
-    			<a href="/reb/subject-wise"><img class="img-fluid" src="../images/2.jpg" alt=""></a>
+    			<a href="test_yourself_subjectwise"><img class="img-fluid" src="../images/2.jpg" alt=""></a>
     		</div>
 		    <div class="col-md-7 col-lg-9 col-sm-7">
 				<div class="main_title">
-					<a href="subject-wise">Subject Wise</a>
-				</div>
-				<div id="owl-demo" class="text-center">
+					<a href="test_yourself_subjectwise">Subject Wise Test</a>
+				</div>	
+				<div id="owl-demo" class="text-center">        
 					<div class="item">
 						<div class="section_box">
 						  <a href=""><div class="product_icon">
@@ -80,20 +80,20 @@
 						  </div><br>
 						  <h5>Business Studies</h5></a>
 						</div>
-					</div>
+					</div>		
 				</div>
 			</div>
 		</div>
 	</div>
-
+	
 	<div class="bg">
 		<div class="container-fluid">
 	    	<div class="row">
 				<div class="col-md-7 col-lg-9 col-sm-7">
 					<div class="main_title text-right">
-						<a href="class-wise">Class Wise</a>
+						<a href="">At School Level</a>
 					</div>
-					<div id="owl-demo" class="text-center">
+					<div id="owl-demo" class="text-center">        
 						<div class="item">
 							<div class="section_box">
 							  <a href=""><div class="product_icon">
@@ -149,32 +149,32 @@
 							  </div><br>
 							  <h5>BA</h5></a>
 							</div>
-						</div>
+						</div>		
 					</div>
 				</div>
 				<div class="col-md-5 col-lg-3 col-sm-5 d-none d-sm-block category_img">
-    				<a href="class-wise"><img class="img-fluid" src="../images/3.jpg" alt=""></a>
+    				<a href="#"><img class="img-fluid" src="../images/3.jpg" alt=""></a>
     			</div>
 			</div>
 		</div>
 	</div>
-
+	
 	<div class="container-fluid my-4">
     	<div class="row">
     		<div class="col-md-5 col-lg-3 col-sm-5 d-none d-sm-block category_img">
-				<a href="/reb/board-material"><img class="img-fluid" src="../images/6.jpg" alt=""></a>
+				<a href="#"><img class="img-fluid" src="../images/6.jpg" alt=""></a>
 			</div>
 			<div class="col-md-7 col-lg-9 col-sm-7">
 				<div class="main_title">
-					<a href="board-material">Study Material By Board</a>
-				</div>
-				<div id="owl-demo" class="text-center">
+					<a href="">Graduation/Post Graduation</a>
+				</div>	
+				<div id="owl-demo" class="text-center">        
 					<div class="item">
 						<div class="section_box">
 						  <a href=""><div class="product_icon">
 							<i class="fas fa-at"></i>
 						  </div><br>
-						  <h5>ICSE</h5></a>
+						  <h5>BSC</h5></a>
 						</div>
 					</div>
 					<div class="item">
@@ -182,7 +182,7 @@
 						  <a href=""><div class="product_icon">
 							<i class="fas fa-at"></i>
 						  </div><br>
-						  <h5>CBSE</h5></a>
+						  <h5>BTECH</h5></a>
 						</div>
 					</div>
 					<div class="item">
@@ -190,7 +190,7 @@
 						  <a href=""><div class="product_icon">
 							<i class="fas fa-at"></i>
 						  </div><br>
-						  <h5>PSEB</h5></a>
+						  <h5>BCA</h5></a>
 						</div>
 					</div>
 					<div class="item">
@@ -198,7 +198,7 @@
 						  <a href=""><div class="product_icon">
 							<i class="fas fa-at"></i>
 						  </div><br>
-						  <h5>Kerala</h5></a>
+						  <h5>MSc</h5></a>
 						</div>
 					</div>
 					<div class="item">
@@ -206,7 +206,7 @@
 						  <a href=""><div class="product_icon">
 							<i class="fas fa-at"></i>
 						  </div><br>
-						  <h5>Maharashtra</h5></a>
+						  <h5>BA</h5></a>
 						</div>
 					</div>
 					<div class="item">
@@ -214,7 +214,7 @@
 						  <a href=""><div class="product_icon">
 							<i class="fas fa-at"></i>
 						  </div><br>
-						  <h5>Gujarat</h5></a>
+						  <h5>BBA</h5></a>
 						</div>
 					</div>
 					<div class="item">
@@ -222,22 +222,22 @@
 						  <a href=""><div class="product_icon">
 							<i class="fas fa-at"></i>
 						  </div><br>
-						  <h5>GOA</h5></a>
+						  <h5>MBA</h5></a>
 						</div>
-					</div>
+					</div>		
 				</div>
 			</div>
 		</div>
 	</div>
-
+	
 	<div class="bg">
 		<div class="container-fluid">
 	    	<div class="row">
 				<div class="col-md-7 col-lg-9 col-sm-7">
 					<div class="main_title text-right">
-						<a href="entranc-exam">Entrance Exam Wise</a>
+						<a href="">Entrance Exam Wise</a>
 					</div>
-					<div id="owl-demo" class="text-center">
+					<div id="owl-demo" class="text-center">        
 						<div class="item">
 							<div class="section_box">
 							  <a href=""><div class="product_icon">
@@ -293,16 +293,16 @@
 							  </div><br>
 							  <h5>SCC</h5></a>
 							</div>
-						</div>
+						</div>		
 					</div>
 				</div>
 				<div class="col-md-5 col-lg-3 col-sm-5 d-none d-sm-block category_img">
-    				<a href="/reb/entranc-exam"><img class="img-fluid" src="../images/7.jpg" alt=""></a>
+    				<a href="#"><img class="img-fluid" src="../images/7.jpg" alt=""></a>
     			</div>
 			</div>
 		</div>
 	</div>
-
+	
 	<div class="container-fluid my-4">
     	<div class="row">
     		<div class="col-md-5 col-lg-3 col-sm-5 d-none d-sm-block category_img">
@@ -310,9 +310,9 @@
 			</div>
 			<div class="col-md-7 col-lg-9 col-sm-7">
 				<div class="main_title">
-					<a href="">GOVT. Exam Wise</a>
+					<a href="">GOVT. Exam/International Exam/Law Entrance Exam</a>
 				</div>
-				<div id="owl-demo" class="text-center">
+				<div id="owl-demo" class="text-center">        
 					<div class="item">
 						<div class="section_box">
 						  <a href=""><div class="product_icon">
@@ -368,226 +368,10 @@
 						  </div><br>
 						  <h5>DRDO</h5></a>
 						</div>
-					</div>
+					</div>		
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<div class="bg">
-		<div class="container-fluid">
-	    	<div class="row">
-				<div class="col-md-7 col-lg-9 col-sm-7">
-					<div class="main_title text-right">
-						<a href="">UR Interset Wise</a>
-					</div>
-					<div id="owl-demo" class="text-center">
-						<div class="item">
-							<div class="section_box">
-							  <a href=""><div class="product_icon">
-								<i class="fas fa-at"></i>
-							  </div><br>
-							  <h5>Bussiness</h5></a>
-							</div>
-						</div>
-						<div class="item">
-							<div class="section_box">
-							  <a href=""><div class="product_icon">
-								<i class="fas fa-at"></i>
-							  </div><br>
-							  <h5>Cumputers</h5></a>
-							</div>
-						</div>
-						<div class="item">
-							<div class="section_box">
-							  <a href=""><div class="product_icon">
-								<i class="fas fa-at"></i>
-							  </div><br>
-							  <h5>Latest Tectnologies</h5></a>
-							</div>
-						</div>
-						<div class="item">
-							<div class="section_box">
-							  <a href=""><div class="product_icon">
-								<i class="fas fa-at"></i>
-							  </div><br>
-							  <h5>Latest Mobiles/Cumputers</h5></a>
-							</div>
-						</div>
-						<div class="item">
-							<div class="section_box">
-							  <a href=""><div class="product_icon">
-								<i class="fas fa-at"></i>
-							  </div><br>
-							  <h5>Motivational</h5></a>
-							</div>
-						</div>
-						<div class="item">
-							<div class="section_box">
-							  <a href=""><div class="product_icon">
-								<i class="fas fa-at"></i>
-							  </div><br>
-							  <h5>Fastion</h5></a>
-							</div>
-						</div>
-						<div class="item">
-							<div class="section_box">
-							  <a href=""><div class="product_icon">
-								<i class="fas fa-at"></i>
-							  </div><br>
-							  <h5>Creative Courses</h5></a>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-5 col-lg-3 col-sm-5 d-none d-sm-block category_img">
-    				<img class="img-fluid" src="../images/8.jpg" alt="">
-    			</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="container-fluid my-4">
-    	<div class="row">
-    		<div class="col-md-5 col-lg-3 col-sm-5 d-none d-sm-block category_img">
-				<a href=""><img class="img-fluid" src="../images/4.jpg" alt=""></a>
-			</div>
-			<div class="col-md-7 col-lg-9 col-sm-7">
-				<div class="main_title">
-					<a href="">Engineering Study Material</a>
-				</div>
-				<div id="owl-demo" class="text-center">
-					<div class="item">
-						<div class="section_box">
-						  <a href=""><div class="product_icon">
-							<i class="fas fa-at"></i>
-						  </div><br>
-						  <h5>Chemical Engineering</h5></a>
-						</div>
-					</div>
-					<div class="item">
-						<div class="section_box">
-						  <a href=""><div class="product_icon">
-							<i class="fas fa-at"></i>
-						  </div><br>
-						  <h5>Electrical & Electronics</h5></a>
-						</div>
-					</div>
-					<div class="item">
-						<div class="section_box">
-						  <a href=""><div class="product_icon">
-							<i class="fas fa-at"></i>
-						  </div><br>
-						  <h5>Mechanical</h5></a>
-						</div>
-					</div>
-					<div class="item">
-						<div class="section_box">
-						  <a href=""><div class="product_icon">
-							<i class="fas fa-at"></i>
-						  </div><br>
-						  <h5>Cumputer Science</h5></a>
-						</div>
-					</div>
-					<div class="item">
-						<div class="section_box">
-						  <a href=""><div class="product_icon">
-							<i class="fas fa-at"></i>
-						  </div><br>
-						  <h5>Civil</h5></a>
-						</div>
-					</div>
-					<div class="item">
-						<div class="section_box">
-						  <a href=""><div class="product_icon">
-							<i class="fas fa-at"></i>
-						  </div><br>
-						  <h5>Aeronautical</h5></a>
-						</div>
-					</div>
-					<div class="item">
-						<div class="section_box">
-						  <a href=""><div class="product_icon">
-							<i class="fas fa-at"></i>
-						  </div><br>
-						  <h5>Instrumentation</h5></a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="bg">
-		<div class="container-fluid">
-	    	<div class="row">
-				<div class="col-md-7 col-lg-9 col-sm-7">
-					<div class="main_title text-right">
-						<a href="">Medical Study Material</a>
-					</div>
-					<div id="owl-demo" class="text-center">
-						<div class="item">
-							<div class="section_box">
-							  <a href=""><div class="product_icon">
-								<i class="fas fa-at"></i>
-							  </div><br>
-							  <h5>Anatomy</h5></a>
-							</div>
-						</div>
-						<div class="item">
-							<div class="section_box">
-							  <a href=""><div class="product_icon">
-								<i class="fas fa-at"></i>
-							  </div><br>
-							  <h5>Biochemistry</h5></a>
-							</div>
-						</div>
-						<div class="item">
-							<div class="section_box">
-							  <a href=""><div class="product_icon">
-								<i class="fas fa-at"></i>
-							  </div><br>
-							  <h5>Surgery</h5></a>
-							</div>
-						</div>
-						<div class="item">
-							<div class="section_box">
-							  <a href=""><div class="product_icon">
-								<i class="fas fa-at"></i>
-							  </div><br>
-							  <h5>Gynecology</h5></a>
-							</div>
-						</div>
-						<div class="item">
-							<div class="section_box">
-							  <a href=""><div class="product_icon">
-								<i class="fas fa-at"></i>
-							  </div><br>
-							  <h5>Dentistry</h5></a>
-							</div>
-						</div>
-						<div class="item">
-							<div class="section_box">
-							  <a href=""><div class="product_icon">
-								<i class="fas fa-at"></i>
-							  </div><br>
-							  <h5>Veterinery Medicine</h5></a>
-							</div>
-						</div>
-						<div class="item">
-							<div class="section_box">
-							  <a href=""><div class="product_icon">
-								<i class="fas fa-at"></i>
-							  </div><br>
-							  <h5>Microbiology</h5></a>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-5 col-lg-3 col-sm-5 d-none d-sm-block category_img">
-    				<a href=""><img class="img-fluid" src="../images/5.jpg" alt=""></a>
-    			</div>
-			</div>
-		</div>
-	</div>
-  <%- include sitelayouts/footer.ejs %>
+	<%- include ../sitelayouts/footer.ejs %>
