--- a/views/adminlayouts/header.ejs
+++ b/views/adminlayouts/header.ejs
@@ -109,9 +109,9 @@
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="add-category">Category</a></li>
-            <li><a href="add_sub_category">Sub Category</a></li>
-            <li><a href="add_nano_category">Nano Category</a></li>
+            <li><a href="/admin/category/add-category">Category</a></li>
+            <li><a href="/admin/category/sub_category">Sub Category</a></li>
+            <li><a href="/admin/category/nano_categories">Nano Category</a></li>
           </ul>
         </li>
         <li class="treeview">
@@ -159,15 +159,15 @@
           </ul>
         </li>
         <li class="treeview">
-          <a href="add-content"><i class="fa fa-plus-square-o"></i> <span>Content</span>
+          <a href="#"><i class="fa fa-plus-square-o"></i> <span>Content</span>
             <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
           </a>
           <ul class="treeview-menu">
-            <li><a href="add-content">Add New Content</a></li>
-            <li><a href="content-list">View Page</a></li>
-            <li><a href="content-list">Content List</a></li>
+            <li><a href="/admin/content/addcontent">Add New Content</a></li>
+            <li><a href="/admin/content/contentlist">View Page</a></li>
+            <li><a href="/admin/content/contentlist">Content List</a></li>
           </ul>
         </li> <li class="treeview">
           <a href="#"><i class="fa fa-bolt"></i> <span>Eligibilites</span>
